change dor deployment

--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,7 @@ config/initializers/secret_token.rb
 
 # these should all be checked in to normalize the environment:
 # Gemfile.lock, .ruby-version, .ruby-gemset
-Gemfile.lock
+# Gemfile.lock
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
